@@ -17,6 +17,7 @@ Version 1.25  2010-01-24
  * write to system data file using lock
  * common/ini_file_reader.c: use one context, not two parameters
  * storage status sync modified (the code of tracker and storage both changed)
+ * when recv kill signal, worker thread quit more quickly
 
 Version 1.24  2010-01-06
  * call php_fdfs_close with TSRMLS_CC as php_fdfs_close(i_obj TSRMLS_CC)
